ターゲット

--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -5,3 +5,34 @@
 4. キャプション …　写真や図の説明、無駄な情報は極力省いて見やすく分かりやすくする。
 5. 写真、図、イラスト　…　イメージしやすくする為にしよう。
 6. タイトル　…　一番さきに読ませたい要素、何を目的としているのか
+
+* メリハリ… 色や書体を変えて伝えたい情報を見やすくする。
+* あしらい… スパイス的な要素を入れることで、覚えてもらいやすくする。
+
+### 「Who * What * How」の法則
+* 誰に　×　何を？　×　どうやって？
+≫この３要素を設定して全体イメージを確立させる。
+↓
+* 見てわかる = 伝わる見せ方
+>> イメージが決まると見せ方も定まってくる。
+>> ポイントは「伝えたい事を効果的に正しく伝える」こと。
+↓
+* 情報が正しく伝わる。
+
+### ターゲット
+* 30~40 男性　…　力強いベーシックなゴシック体
+* 10~20 女性　…　小さめの文字で柔らか目なフォント(丸文字っぽいのとか)
+* 小学生      …　大き目はっきり丸型フォント(色を交互させるとかも)
+* 高齢者      …　大き目で字間が詰まっていてはっきりとした明朝体
+
+#### ターゲットの分析 どんな人なのか具体的にイメージする
+* 性別
+* 年齢
+* 職業
+* 住んでいる地域
+* 嗜好
+* 趣味
+* ライフスタイル
+* よく持ち運ぶもの、バッグの中身
+* 好きなブランド、メーカー
+* ライフスタイル
