ターゲットについて

--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -11,11 +11,11 @@
 
 ### 「Who * What * How」の法則
 * 誰に　×　何を？　×　どうやって？
-≫この３要素を設定して全体イメージを確立させる。
+* この３要素を設定して全体イメージを確立させる。
 ↓
 * 見てわかる = 伝わる見せ方
->> イメージが決まると見せ方も定まってくる。
->> ポイントは「伝えたい事を効果的に正しく伝える」こと。
+* イメージが決まると見せ方も定まってくる。
+* ポイントは「伝えたい事を効果的に正しく伝える」こと。
 ↓
 * 情報が正しく伝わる。
 
@@ -36,3 +36,14 @@
 * よく持ち運ぶもの、バッグの中身
 * 好きなブランド、メーカー
 * ライフスタイル
+
+### 伝えたいことを明確にする
+* <何を> <なぜ> 伝えたい？
+* <おいしさをアピール>して<新商品を知ってもらいたい>
+* <おいしさをアピール>して<ブランドイメージを向上させたい>
+* <おいしさをアピール>して<売上伸ばしたい>
+* <商品の安全を伝えて>して<新商品を知ってもらいたい>
+* <商品の安全を伝えて>して<ブランドイメージを向上させたい>
+* etc…
+
+* What <栄養価を伝えたい> Who<美容に関心のある30代女性> or <健康志向のシニア男女>
