--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -47,3 +47,11 @@
 * etc…
 
 * What <栄養価を伝えたい> Who<美容に関心のある30代女性> or <健康志向のシニア男女>
+
+### 見せ方を考える
+1. 優先順位を考える　…　whoとWhatを元に要素の優先順位をつけていく。どのような構成が効果的か整理する
+2. ラフで完成イメージ　…　実際にラフを描いてみて、どれが一番魅力的か考える
+3. 方向性を考える　…　全体のデザイン雰囲気を考える。ターゲットに合わせて修正していく。雑誌やWebページで参考になるものを探す。可愛い系、かっこいい系、メタリック系…
+
+#### 写真
+* 写真の見せ方でも雰囲気は大分変わる。文字多めにするか写真大き目にするかなど。
