デザインの進め方

--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -55,3 +55,10 @@
 
 #### 写真
 * 写真の見せ方でも雰囲気は大分変わる。文字多めにするか写真大き目にするかなど。
+
+### デザインの進め方
+1. リサーチする。…　<who>*<what>でどのような感じにするか抽象化
+2. 構成を決める　…　ラフを決める。
+3. 優先順位を決める　…　(視線誘導Z視線、逆N視線の所に優先度ごとに配置)
+4. キーワードを探る　…　上品、可愛い…
+5. イメージを具体化する。…　フォントを考える
