レイアウトルール

--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -62,3 +62,8 @@
 3. 優先順位を決める　…　(視線誘導Z視線、逆N視線の所に優先度ごとに配置)
 4. キーワードを探る　…　上品、可愛い…
 5. イメージを具体化する。…　フォントを考える
+
+## レイアウトルール
+* 判読性　…　グループ化、ライン、コンストラクト
+* 視認性　…　メリハリ、ジャンプ率(視線誘導)、ホワイトスペース
+* 可読性　…　書体、カラー
