とりあえず終わり！

--- a/レイアウトや画面デザインについて.md
+++ b/レイアウトや画面デザインについて.md
@@ -1,3 +1,8 @@
+# このテキストについて
+* 著者「ARENSKI」様の書籍「知りたいレイアウトデザイン」を読んだ際の自分用のメモです！
+* この手の勉強はあまりしたことなくとても参考になったので、気になる方は書店へ！
+
+----------------------
 ### 伝わるレイアウトとは
 1. 文字　…　フォントによってイメージは変わる。ターゲット層に合わせて切り替えていくのがベスト。
 2. 本文　…　メインの文章、文章量が多いいのでストレスない文章にする事が大事。
@@ -67,3 +72,26 @@
 * 判読性　…　グループ化、ライン、コンストラクト
 * 視認性　…　メリハリ、ジャンプ率(視線誘導)、ホワイトスペース
 * 可読性　…　書体、カラー
+
+### アイディア
+* グリットレイアウト
+* 要素を集める
+* シンメトリー、左右対象
+* 対比、対比２分割
+* 分割
+* ビジュアル中央配置
+* 反復
+* 逆三角形
+* 時系列に並べる
+* 引き出し線
+* 目的に合わせた文字組
+* 文字組混在
+* 切り抜き写真
+* フリーレイアウト
+* 数字でリズム感
+* 角度をつける
+* ストーリー性
+* 裁ち落とし
+…
+…
+…
