--- a/プログラミングバイブルメモ.md
+++ b/プログラミングバイブルメモ.md
@@ -1,1 +1,12 @@
-*** test
+# このテキストについて
+---
+* 書籍「Unity ゲーム プログラミング・バイブル」を読んだ際の自分用のメモです。
+
+----
+## 【NO.01 3D RAN ゲーム】
+Unityのアニメーションシステムはとても強力で、そのシステムの全貌をMecanumという。
+第一章はAnimatarについて書かれている。
+Animatorコンポーネントは単体では意味を持たない、図は書籍を参照。
+Animatorコンポーネントは最低限AnimartorControllerがなくてはならない。
+人型の3Dモデルを使用する場合はAvatorを使う事で、再利用する事も可能。
+一時中断
