【NO.01】【NO.02】読破

--- a/プログラミングバイブルメモ.md
+++ b/プログラミングバイブルメモ.md
@@ -3,10 +3,20 @@
 * 書籍「Unity ゲーム プログラミング・バイブル」を読んだ際の自分用のメモです。
 
 ----
-## 【NO.01 3D RAN ゲーム】
-Unityのアニメーションシステムはとても強力で、そのシステムの全貌をMecanumという。
-第一章はAnimatarについて書かれている。
-Animatorコンポーネントは単体では意味を持たない、図は書籍を参照。
-Animatorコンポーネントは最低限AnimartorControllerがなくてはならない。
-人型の3Dモデルを使用する場合はAvatorを使う事で、再利用する事も可能。
-一時中断
+## 感想
+* サンプルデータがWEBで配布されているようだが、出来ればCDにデータを入れて配布してほしかった…。※通信環境が悪くて重いプロジェクトデータをダウンロードできない…ｗ
+* 画像が適度にあってイメージしやすかった。所々、詳しい所はUnityの公式ページを見てほしいという所があったが、載せるべき所はしっかり本書に記載されているし、しっかり情報は公式からもインプットしていってほしいという意図を感じ得たので、良かったと思う。
+----
+
+### 【NO.01 3D RUN ゲーム】
+* 基本的なAnimator、AnimationなどのUnityのシステム、「Mecanim」についてが語られていた。
+* パラメーターについて詳しく記述されていたり、順をおって説明していたので分かりやすかった。
+* 復習にもなった。
+
+### 【NO.02 3D RUN &射撃ゲーム】
+* Mecanimについての高度な取り扱い方が書かれていた。
+* 知らない事ばっかで楽しかった。
+* 3Dアニメーションの基礎知識がまず記述されている。
+* アニメーションの合成方法、アバターマスク(一部アニメーションの破棄)、IK、ブレンドツリー(アニメーション間の補間)、オーバーライド等様々な事が書かれていた。
+* プロジェクトを開いてみたほうがよさそうかも
+
